# GalaxyBuilder

./: .gitignore  BUILD_GUIDE.md  CMAKE_MODULES.md  CMakeLists.txt  CMakePresets.json  CMakeWorkflowPresets.json  Doxyfile  FACTION_CREATION_ENHANCEMENT.md  INSTALLER_GUIDE.md  LICENSE  MVVM_ARCHITECTURE.md  README.md  TESTING_COMPLETION_REPORT.md  build-linux.sh  build.ps1  deploy-windows.ps1
app/: CMakeLists.txt  GalaxyController.cpp  GalaxyController.h  main.cpp
app/qml/: Main.qml
app/qml/components/: FactionDetailView.qml  FactionListItem.qml  FactionListItem_New.qml  FactionListView.qml  FactionXMLExporter.qml  GalaxyManager.qml  ImportExportManager.qml  NewFactionDialog.qml  ParameterPanel.qml  PlanetDetailsDialog.qml  PlanetListView.qml  PlanetPropertyView.qml  PropertyPanel.qml  StarSystemVisualizer.qml  SystemNode.qml  SystemPropertiesDialog.qml  SystemPropertiesDialog_backup.qml  SystemPropertiesDialog_broken.qml  SystemPropertiesDialog_minimal.qml  SystemPropertiesManager.qml  TravelLane.qml  ZoomControls.qml  ZoomIndicator.qml
app/qml/components/faction/: FactionActionButtons.qml  FactionColorEditor.qml  FactionColorIndicator.qml  FactionDescriptionEditor.qml  FactionDetailHeader.qml  FactionInfoDisplay.qml  FactionInformation.qml  FactionNameEditor.qml  FactionResourceBonuses.qml  FactionResourceStock.qml  FactionStatistics.qml  FactionSystems.qml
app/qml/views/: FactionManagerView.qml  GalaxyView.qml
modules/GalaxyCore/: CMakeLists.txt  Common.h  Galaxy.cpp  Galaxy.h  GalaxyController.cpp  GalaxyController.h  GalaxyGenerator.cpp  GalaxyGenerator.h  ImportExportViewModel.cpp  ImportExportViewModel.h  Planet.cpp  Planet.h  PlanetListModel.cpp  PlanetListModel.h  StarSystem.cpp  StarSystem.h  StarSystemListModel.cpp  StarSystemListModel.h  StarSystemNew.h  StarSystemQml.cpp  StarSystemQml.h  SystemDataManager.cpp  SystemDataManager.h  SystemPropertiesViewModel.cpp  SystemPropertiesViewModel.h  TravelLane.cpp  TravelLane.h  TravelLaneListModel.cpp  TravelLaneListModel.h  XmlValidator.cpp  XmlValidator.h  galaxycore_global.h
modules/GalaxyCore/models/: CMakeLists.txt  QmlModels.h
modules/GalaxyCore/models/src/: GalaxyModel.cpp  PlanetModel.cpp  QmlModels.cpp  StarSystemModel.cpp  TravelLaneModel.cpp
modules/GalaxyCore/models/tests/: CMakeLists.txt  test_GalaxyModel.cpp  test_PlanetModel.cpp  test_StarSystemModel.cpp  test_TravelLaneModel.cpp
modules/GalaxyCore/utilities/: CMakeLists.txt
modules/GalaxyCore/viewmodels/: CMakeLists.txt  QmlViewModels.h
modules/GalaxyCore/viewmodels/src/: GalaxyViewModel.cpp  PlanetListModel.cpp  PlanetViewModel.cpp  QmlViewModels.cpp  StarSystemListModel.cpp  StarSystemViewModel.cpp  TravelLaneListModel.cpp  TravelLaneViewModel.cpp
modules/GalaxyCore/viewmodels/tests/: CMakeLists.txt  test_commons.cpp  test_galaxy_viewmodel.cpp  test_planet_viewmodel.cpp  test_starsystem_viewmodel.cpp  test_travellane_viewmodel.cpp
modules/GalaxyExporter/: CMakeLists.txt  QmlExporter.h
modules/GalaxyExporter/include/ggh/modules/GalaxyExporter/: AbstractExporter.h  ExporterObject.h  GalaxyXMLExporter.h  QmlExporter.h  StarSystemXMLExporter.h  galaxyexporter_export.h
modules/GalaxyExporter/src/: ExporterObject.cpp  GalaxyXMLExporter.cpp  QmlExporter.cpp  StarSystemXMLExporter.cpp
modules/GalaxyExporter/tests/: CMakeLists.txt  test_GalaxyXMLExporter.cpp  test_StarStystemXMLExporter.cpp  test_exporter.cpp
modules/GalaxyFactions/: CMakeLists.txt
modules/GalaxyFactions/docs/: ClassDiagram.puml  Domain.puml  ERD.puml
modules/GalaxyFactions/include/ggh/modules/GalaxyFactions/: Faction.h  System.h  (+6 more)
modules/GalaxyFactions/models/: CMakeLists.txt
modules/GalaxyFactions/models/src/: Faction.cpp  FactionHandover.cpp  GalaxyFactions.cpp  HandoverType.cpp  ResourceType.cpp  System.cpp  SystemNotes.cpp  SystemResourceBonus.cpp
modules/GalaxyFactions/models/tests/: CMakeLists.txt  test_faction.cpp  test_faction_handover.cpp  test_galaxy_factions.cpp  test_handover_type.cpp  test_resource_type.cpp  test_system.cpp  test_system_fixed.cpp  test_system_notes.cpp  test_system_resource_bonus.cpp
modules/GalaxyFactions/src/: Faction.cpp  FactionHandover.cpp  GalaxyFactions.cpp  HandoverType.cpp  ResourceType.cpp  System.cpp  SystemNotes.cpp  SystemResourceBonus.cpp  temp.cpp
modules/GalaxyFactions/tests/: CMakeLists.txt  test_faction.cpp  test_faction_handover.cpp  test_galaxy_factions.cpp  test_handover_type.cpp  test_resource_type.cpp  test_system.cpp  test_system_fixed.cpp  test_system_notes.cpp  test_system_resource_bonus.cpp
modules/GalaxyFactions/viewmodels/: CMakeLists.txt
modules/GalaxyFactions/viewmodels/src/: FactionListModel.cpp  FactionViewModel.cpp  GalaxyFactionsViewModel.cpp  SystemListModel.cpp  SystemResourceBonusListModel.cpp  SystemResourceBonusViewModel.cpp  SystemViewModel.cpp
modules/GalaxyFactions/viewmodels/tests/: CMakeLists.txt  test_faction_list_model.cpp  test_faction_viewmodel.cpp  test_galaxy_factions_viewmodel.cpp  test_system_list_model.cpp  test_system_resource_bonus_list_model.cpp  test_system_resource_bonus_viewmodel.cpp  test_system_viewmodel.cpp
modules/GalaxyFactories/: CMakeLists.txt  QmlFactories.h  galaxyfactories_global.h
modules/GalaxyFactories/src/: GalaxyGenerator.cpp  QmlFactories.cpp  XmlGalaxyImporter.cpp
modules/GalaxyFactories/tests/: CMakeLists.txt  test_AbstractGalaxyFactory.cpp  test_GalaxyGenerator.cpp  test_GalaxyGenerator_Full.cpp  test_GalaxyParameterRespect.cpp  test_XmlGalaxyImporter.cpp  test_planet_generation.cpp
tests/: CMakeLists.txt  PLANET_PERSISTENCE_PROOF.cpp  README.md  fix_xml.py  run_tests.bat  run_tests.ps1  test_dialog_persistence.cpp  test_galaxy.cpp  test_galaxy_fixed.cpp  test_importexport_viewmodel.cpp  test_integration.cpp  test_integration_new.cpp  test_planet_generation.cpp  test_planet_persistence.cpp  test_planetlistmodel.cpp  test_planetlistmodel_simple.cpp  test_simple.cpp  test_simple_planet.cpp  test_systemdatamanager.cpp  test_systemdatamanager_new.cpp  test_systemproperties_viewmodel.cpp  test_xmlvalidator.cpp  test_xmlvalidator_new.cpp
(+50 files in other folders)
